Improved package and added missing specs

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bengoruser/mandrill-bridge",
+    "name": "bengor-user/mandrill-bridge",
     "description": "Adapter to make User compatible with Mandrill",
     "keywords": ["user", "adapter", "mailing", "mandrill", "ddd"],
     "license": "MIT",
@@ -16,15 +16,9 @@
             "homepage": "http://gorkalaucirica.net"
         }
     ],
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/BenGorUser/User"
-        }
-    ],
     "require": {
         "php": "^5.5 || ^7.0",
-        "bengor/user": "dev-refactor/decouple-from-third-party-libraries",
+        "bengor-user/user": "0.6.x-dev",
         "mandrill/mandrill": "^1.0"
     },
     "require-dev": {
